Fixed problems and now works on tablet

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
     display: grid;
+   
     place-items: center;
     min-height: 100vh;
     width: 100%;
@@ -22,3 +23,22 @@ h1{ margin: 0 0 0 130px;}
 .lorem{ 
     margin: 0 0 0 77px;
 }
+
+@media only screen and (min-width: 415px){
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    h1{
+    text-align: center; 
+    margin: 0 0 0 0;
+}
+.lorem{
+    text-align: center;
+    margin: 0 0 0 0;
+}
+a{ text-align: center;}
+}
+
+@media only screen and (min-width: 415px)
